--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
-    <string name="products">PRODUCTS</string>
+    <string name="products">Products</string>
 
     <string name="edit_info">Your subtotal will be updated when you save your cart</string>
     <string name="check_out">Check Out</string>
@@ -62,7 +62,7 @@
     <string name="phone">Phone No</string>
     <string name="product_desc">Product Descrption</string>
     <string name="browse_by_category">Browse By Category</string>
-    <string name="featured_product">Featured products</string>
+    <string name="featured_product">Featured Products</string>
     <string name="see_all">See All</string>
     <string name="buy_now">Buy Now</string>
     <string name="spinner_prompt">Dubai</string>
