--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="product_desc">Product Descrption</string>
     <string name="browse_by_category">Browse By Category</string>
     <string name="featured_product">Featured Products</string>
+    <string name="no_internet">Please check your internet and try again</string>
+    <string name="start_shopping">START SHOPPING</string>
     <string name="see_all">See All</string>
     <string name="buy_now">Buy Now</string>
     <string name="spinner_prompt">Dubai</string>
@@ -76,6 +78,7 @@
     <string name="shipping">Shipping</string>
     <string name="check_email">Please check your email for more details</string>
     <string name="tax">Tax</string>
+    <string name="grand_total">Grand Total</string>
     <string name="product_lowcase">Products</string>
     <string name="my_profile">My Profile</string>
     <string name="promo_code">Eg:EADCX124d</string>
@@ -142,9 +145,9 @@
     <string name="typeface_roboto_regular">Roboto-Regular</string>
     <string name="typeface_roboto_medium">Roboto-Medium</string>
 
-    <string name="cart_1">Your cart is empty</string>
+    <string name="cart_1">Your Shopping Cart is Empty</string>
     <string name="cart_2">Sign in to view items that you added to your Cart</string>
-    <string name="cart_3">Add items to your Cart as you shop</string>
+    <string name="cart_3">Time to shop!</string>
 
     <string name="backdrop_title">DESIGNER MIM</string>
     <string name="backdrop_subtitle">UAE top designer collection</string>
